--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 /*entra no site, vai até audience->singup form-> url-> abrir a url em outra aba e inspeciona para conseguir o u e o id.*/
 
-MAILCHIMP_URL="https://gmail.us18.list-manage.com/subscribe/post"
-MAILCHIMP_U="3ba5143abbabfa5e22b2e4f36"
-MAILCHIMP_ID="10abd76ced"
+VITE_MAILCHIMP_URL="https://gmail.us18.list-manage.com/subscribe/post"
+VITE_MAILCHIMP_U="3ba5143abbabfa5e22b2e4f36"
+VITE_MAILCHIMP_ID="10abd76ced"
